--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="./src/styles.css">
 
-    <title>Invasores do espaço</title>
+    <title>Space Invaders</title>
 </head>
 <body>
     <canvas></canvas>
